Refactoring
Improved a lot of functionalities.
